# mnn_demo

./: .gitignore  CMakeLists.txt  CMakeLists_main.txt  CMakeLists_py.txt  bip_msg.cpp  game_msg2.pkl  main.cpp  main2.cpp  main_vector_string.cpp  proto.b  test.py
proto/: KoalaAI_C2G.pb.cc  KoalaAI_C2G.pb.h  KoalaAI_C2G.proto  KoalaAI_G2C.pb.cc  KoalaAI_G2C.pb.h  KoalaAI_G2C.proto  build.bat
py_proto/: KoalaAI_C2G_pb2.py  KoalaAI_G2C_pb2.py  __init__.py
